2004-07-27  Jens Petersen  <petersen@haskell.org>

	* mk/config.mk.in (INSTALL_DIR): Define ABS_TOP.  No longer define CPP.

	* mk/common.mk: Sedpipe ABS_TOP and use it for TARDIR to fix
	tarsource target. 

	* glade/Makefile: Use TOP.  Generate GladeType.chs with the same
	invocation used by sourceview and gtk.

	* doc/Makefile: Use common.mk and EXTRA_TARFILES, drop own
	tarsource target and no longer set CURDIR and TARDIR.

	* VERSION: Up to 0.9.5.50

2004-07-26 Axel Simon <A.Simon@kent.ac.uk>

	* gtk/abstract/ButtonBox.chs: Remove buttonBoxGetChildSecondary
	for Gtk prior to 2.4.
	
2004-07-26 Duncan Coutts <duncan@coutts.uklinux.net>

	* configure.in: use relative $(TOP) variable rather than absolute $TOP
	variable, so Makefiles use relative paths. Add test for gconf package.
	Test for particular versions of gtk API.

	* Makefile: add gconf to list of dirs to build

	* tools/hierarchyGen/hierarchy.list: add GConf object.
	Remove preprocessor annotations, build classes conditionally using
	tags like 'gtk-2.4'. Remove unnecessary annotations by taking advantage
	of changes in the TypeGenerator. Only create GtkFileFilter when
	building against gtk 2.4 or later.

	* tools/hierarchyGen/TypeGen.hs: be a bit cleverer with dealing with
	type prefixes, less hard coded knowledge of Gtk types. No not require
	_get_type annotations when they can be worked out automatically. Allow
	tags like 'gtk-2.4'. Extra command line option to specify module name.

	* tools/callbackGen/gtkmarshal.list: add callback spec needed by gconf

	* sourceview/Makefile: do not run cpp over hierarchy.list

	* mk/config.mk.in: remove absolute path TOP variable. Add gconf flags.
	Add gtk version check flags.

	* gtk/Makefile: do not run cpp over hierarchy.list. Add gtk-2.x tags
	conditional on appropriate config flags.

	* c2hs/chs/CHS.hs: parse hierarchical module names ok.

	* c2hs/base/syntax/Parsers.hs, c2hs/c/CParser.hs: Manuel Chakravarty's